# baremetal_hello_world

./: README.md
baremetal_hello_world/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  baremetal.map  cmake_install.cmake  function.cmake  qemu_trace_translate.py  qlinux  qtoy  rtoy
baremetal_hello_world/bak/: main.c  print.c
baremetal_hello_world/benchmarks/: CMakeLists.txt
baremetal_hello_world/benchmarks/coremark/: core_main.c  coremark.h
baremetal_hello_world/benchmarks/coremark/barebones/: core_portme.c  core_portme.h  ee_printf.c
baremetal_hello_world/benchmarks/coremark/simple/: core_portme.h
baremetal_hello_world/benchmarks/dhrystone/: dhry.h  dhry_1.c
baremetal_hello_world/driver/: uart.c  uart.h
baremetal_hello_world/hal/: machine.h
baremetal_hello_world/hal/linux/: cycle.c
baremetal_hello_world/hal/riscv/: csr.c  cycle.c
baremetal_hello_world/hal/toy/: debug_link.ld  global.c  global.h  init.c  link.ld  pmp_init.c  pmp_init.h  startup.S  to_host.c  trap_handler.c
baremetal_hello_world/hal/toy/include/: riscv_asm.h  riscv_encoding.h  trap.h  trap_handler.h
baremetal_hello_world/hal/toy/trap_handle_func/: ebreak.c  ecall.c  ext_inter_proc.c  fetch_access.c  illegal_inst.c  load_access.c  store_access.c
baremetal_hello_world/lib/print/: print.h
baremetal_hello_world/test/: CMakeCache.txt  CMakeLists.txt
baremetal_hello_world/test/csr/: CMakeCache.txt  CMakeLists.txt  csr.c  csr.c.bak
baremetal_hello_world/test/debug/: CMakeLists.txt  debug_rom.s  debug_rom_mc.s  riscv_encoding.h
baremetal_hello_world/test/fp_hello/: CMakeLists.txt  fp_hello.c
baremetal_hello_world/test/hello/: CMakeCache.txt  CMakeLists.txt  hello.c
baremetal_hello_world/test/interrupt/: CMakeLists.txt  interrupt.c
baremetal_hello_world/test/trap/: CMakeLists.txt  trap.c
